--- a/about/index.html
+++ b/about/index.html
@@ -1,41 +1,149 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8" />
+    <title>About | Unplugged Retreat</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="" />
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <link rel="manifest" href="../site.webmanifest" />
+    <link rel="apple-touch-icon" href="../icon.png" />
+    <!-- Place favicon.ico in the root directory -->
 
-  <link rel="manifest" href="../site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+    <meta name="theme-color" content="#fafafa" />
+  </head>
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+  <body>
+    <header>
+      <div class="content-wrapper">
+        <a href="#">
+          <img />
+        </a>
+        <div class="header-divider"></div>
+        <nav>
+          <ul>
+            <li>
+              <a href="index.html" target="_blank" rel="noopener">About</a>
+            </li>
+            <li>
+              <a href="../faq/index.html" target="_blank" rel="noopener">FAQ</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!--header content wrapper ends-->
+    </header>
 
-<body>
+    <main>
+      <section class="mission">
+        <div class="content-wrapper">
+          <h2>
+            Our Mission - we want to make you the team you always wanted to be.
+          </h2>
+          <div class="mission-content">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+              accumsan lacus vel facilisis. <br />Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
+              gravida. Risus commodo viverra maecenas accumsan lacus vel
+              facilisis.
+            </p>
+          </div>
+        </div>
+        <!--mission content wrapper ends-->
+      </section>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+      <section class="map">
+        <figure></figure>
+      </section>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
+      <section class="contact-section">
+        <div class="content-wrapper">
+          <h2>Contact us, because y'all need this.</h2>
+          <div class="contact-content">
+            <div>
+              <h4>General Information</h4>
+              <address>
+                <p>
+                  333 Main St, Lake Geneva, WI 53147<br />
+                  555-555-5555<br />
+                  hello@unplugged.com
+                </p>
+              </address>
+            </div>
+            <!--general info ends-->
+            <div>
+              <h4>Chat with a Facilitator</h4>
+              <address>
+                <p>
+                  555-555-5556<br />
+                  facilitator@unplugged.com
+                </p>
+              </address>
+            </div>
+            <!--facilitator info ends-->
+          </div>
+          <!--contact content ends-->
+        </div>
+        <!--contact section content wrapper ends-->
+      </section>
+    </main>
 
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
+          <div class="contact">
+            <h4>Contact</h4>
+            <address>
+              <p>
+                555-555-5555<br />
+                hello@unplugged.com
+              </p>
+            </address>
+          </div>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p><a href="#"></a></p>
+              <p><a href="#"></a></p>
+              <p><a href="#"></a></p>
+            </div>
+          </div>
+          <div class="copyright">
+            <p>Copyright 2024 | Unplugged</p>
+          </div>
+        </div>
+      </div>
+      <!--footer content wrapper ends-->
+    </footer>
+
+    <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () {
+        ga.q.push(arguments);
+      };
+      ga.q = [];
+      ga.l = +new Date();
+      ga("create", "UA-XXXXX-Y", "auto");
+      ga("set", "anonymizeIp", true);
+      ga("set", "transport", "beacon");
+      ga("send", "pageview");
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </body>
 </html>
