Added html to faq page

--- a/about/index.html
+++ b/about/index.html
@@ -65,12 +65,14 @@
       </section>
 
       <section class="map">
-        <figure></figure>
+        <figure>
+          
+        </figure>
       </section>
 
       <section class="contact-section">
         <div class="content-wrapper">
-          <h2>Contact us, because y'all need this.</h2>
+          <h2>Contact us, because you all need this.</h2>
           <div class="contact-content">
             <div>
               <h4>General Information</h4>
