--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
       <div class="content-wrapper">
         <a href="#">
-          <img />
+          <img src="" alt="unplugged logo"/>
         </a>
         <div class="header-divider"></div>
         <nav>
@@ -120,15 +120,17 @@
         <div class="content-wrapper">
           <h2>Be a better team in 5 days, like this one.</h2>
           <article>
-            <h3>LaCrue Bottling Co.<br />October 2023</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
-            </p>
+            <div>
+              <h3>LaCrue Bottling Co.<br />October 2023</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur.
+              </p>
+            </div>
           </article>
         </div>
       </section>
