--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,9 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
               ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-              accumsan lacus vel facilisis. <br />Lorem ipsum dolor sit amet,
+              accumsan lacus vel facilisis.
+            </p>
+            <p>Lorem ipsum dolor sit amet,
               consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
               gravida. Risus commodo viverra maecenas accumsan lacus vel
