--- a/about/index.html
+++ b/about/index.html
@@ -19,8 +19,10 @@
     <link rel="stylesheet" href="../css/main.css" />
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
+      rel="stylesheet"
+    />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -28,9 +30,11 @@
   <body>
     <header>
       <div class="content-wrapper">
-        <a href="#">
-          <img src="../img/unpluggedlogo.png" alt="unplugged logo"/>
-        </a>
+        <figure>
+          <a href="#">
+            <img src="../img/unpluggedlogo.png" alt="unplugged logo" />
+          </a>
+        </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -59,11 +63,11 @@
               ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
               accumsan lacus vel facilisis.
             </p>
-            <p>Lorem ipsum dolor sit amet,
-              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-              gravida. Risus commodo viverra maecenas accumsan lacus vel
-              facilisis.
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+              ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+              accumsan lacus vel facilisis.
             </p>
           </div>
         </div>
@@ -72,7 +76,15 @@
 
       <section class="map">
         <figure>
-          
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.2448694958966!2d-88.4209315238542!3d42.592547920381804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bc6e142ea55%3A0xfa4a44e1259ef755!2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1716231236212!5m2!1sen!2sus"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
         </figure>
       </section>
 
