--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
   <body>
     <header>
       <div class="content-wrapper">
-        <a href="#">
-          <img src="img/unpluggedlogo.png" alt="unplugged logo"/>
-        </a>
+        <figure>
+          <a href="#">
+            <img src="img/unpluggedlogo.png" alt="unplugged logo"/>
+          </a>
+        </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -123,8 +125,13 @@
         <div class="content-wrapper">
           <h2>Be a better team in 5 days, like this one.</h2>
           <article>
+            <figure>
+              <a href="#">
+                <img src="img/unplugged-retreat-lacrue.jpg" alt="Team of people">
+              </a>
+            </figure>
             <div>
-              <h3>LaCrue Bottling Co.<br />October 2023</h3>
+              <h3>LaCrue Bottling Co.<br>October 2018</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
