--- a/index.html
+++ b/index.html
@@ -19,10 +19,18 @@
     <link rel="stylesheet" href="css/main.css" />
 
     <!-- FontAwesome CDN version 5.5 -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
+      rel="stylesheet"
+    />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -31,15 +39,17 @@
     <header>
       <div class="content-wrapper">
         <figure>
-          <a href="#">
-            <img src="img/unpluggedlogo.png" alt="unplugged logo"/>
+          <a href="index.html">
+            <img src="img/unpluggedlogo.png" alt="unplugged logo" />
           </a>
         </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
             <li>
-              <a href="about/index.html" target="_blank" rel="noopener">About</a>
+              <a href="about/index.html" target="_blank" rel="noopener"
+                >About</a
+              >
             </li>
             <li>
               <a href="faq/index.html" target="_blank" rel="noopener">FAQ</a>
@@ -54,7 +64,7 @@
         <div class="content-wrapper">
           <h1>Retreat from the desk, return refreshed.</h1>
         </div>
-      </section>  
+      </section>
 
       <aside>
         <div class="content-wrapper">
@@ -130,17 +140,20 @@
           <article>
             <figure>
               <a href="#">
-                <img src="img/unplugged-retreat-lacrue.jpg" alt="Team of people">
+                <img
+                  src="img/unplugged-retreat-lacrue.jpg"
+                  alt="Team of people"
+                />
               </a>
             </figure>
             <div>
-              <h3>LaCrue Bottling Co.<br>October 2018</h3>
+              <h3>LaCrue Bottling Co.<br />October 2018</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
                 nulla pariatur.
               </p>
             </div>
@@ -164,9 +177,21 @@
           <div class="social">
             <h4>Social</h4>
             <div class="social-icons">
-              <p><a href="#"></a></p>
-              <p><a href="#"></a></p>
-              <p><a href="#"></a></p>
+              <p>
+                <a href="https://www.facebook.com" target="_blank"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </p>
+              <p>
+                <a href="https://www.twitter.com" target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com" target="_blank"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </p>
             </div>
           </div>
           <div class="copyright">
@@ -176,7 +201,6 @@
       </div>
     </footer>
 
-    
     <script src="js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
