--- a/faq/index.html
+++ b/faq/index.html
@@ -19,10 +19,18 @@
     <link rel="stylesheet" href="../css/main.css" />
 
     <!-- FontAwesome CDN version 5.5 -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700"
+      rel="stylesheet"
+    />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -32,14 +40,16 @@
       <div class="content-wrapper">
         <figure>
           <a href="#">
-            <img src="../img/unpluggedlogo.png" alt="unplugged logo"/>
+            <img src="../img/unpluggedlogo.png" alt="unplugged logo" />
           </a>
         </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
             <li>
-              <a href="../about/index.html" target="_blank" rel="noopener">About</a>
+              <a href="../about/index.html" target="_blank" rel="noopener"
+                >About</a
+              >
             </li>
             <li>
               <a href="index.html" target="_blank" rel="noopener">FAQ</a>
